# NetSecGameAgents

./: .gitignore  CITATION.cff  README.md  pyproject.toml
agents/: __init__.py  action_list_base_agent.py  action_list_example.py  agent_description.md  agent_utils.py  base_agent.py  graph_agent_utils.py  heuristic_exploration_base_agent.py  llm_utils.py
agents/benign_random/: benign_random_agent.py
agents/double_q_learning/: double_q_agent.py
agents/gnn_dqn/: gnn_dqn_agent.py  schema.pbtxt
agents/gnn_reinforce/: gnn_REINFORCE_agent.py
agents/interactive/: interactive_agent.py
agents/interactive_llm/: assistant.py  interactive_llm_agent.py  netsecenv-task.yaml
agents/interactive_tui/: README.md  assistant.py  communication.py  interactive_tui.py  layout.tcss  netsecenv-task.yaml
agents/llm/: llm_agent-2.py  llm_agent-3.py  llm_agent.py
agents/llm_embed/: llm_embed.py
agents/llm_embed_dqn/: llm_embed_dqn.py
agents/llm_qa/: llm_agent_qa.py
agents/llm_qa_v2/: run.py
agents/llm_rag/: README.md  generate_embedding_db.py  llm_rag.py  llm_rag_agent.py  rag_utils.py  states_prompts_responses.csv
agents/probabilistic_benign/: probabilistic_benign_agent.py
agents/q_learning/: check_q_table.py  q_agent.py
agents/random/: netsecenv-task.yaml  random_agent.py
docs/: bening_random.md  conceptual_attacker_agent.md  defenders_probabilistic.md  defenders_random.md  interactive_tui.md  markov_chain.md  probabilistic_bening_agent.md  q-learning.md
utils/: concept_mapping_logger.py  export_import_mlflow_exp.py  pretty_qagent_log.py
(+102 files in other folders)
